@@ -44,8 +44,8 @@ public class ConfigSettings
     // World Settings
     public static final ValueHolder<Map<ResourceLocation, Triplet<Double, Double, Temperature.Units>>> BIOME_TEMPS;
     public static final ValueHolder<Map<ResourceLocation, Triplet<Double, Double, Temperature.Units>>> BIOME_OFFSETS;
-    public static final ValueHolder<Map<ResourceLocation, Double>> DIMENSION_TEMPS;
-    public static final ValueHolder<Map<ResourceLocation, Double>> DIMENSION_OFFSETS;
+    public static final ValueHolder<Map<ResourceLocation, Pair<Double, Temperature.Units>>> DIMENSION_TEMPS;
+    public static final ValueHolder<Map<ResourceLocation, Pair<Double, Temperature.Units>>> DIMENSION_OFFSETS;
     public static final ValueHolder<Double> CAVE_INSULATION;
     public static final ValueHolder<Double[]> SUMMER_TEMPS;
     public static final ValueHolder<Double[]> AUTUMN_TEMPS;
@@ -64,6 +64,8 @@ public class ConfigSettings
     public static final ValueHolder<Integer[]> INSULATION_SLOTS;
     public static final ValueHolder<List<ResourceLocation>> INSULATION_BLACKLIST;
 
+    public static final ValueHolder<Boolean> CHECK_SLEEP_CONDITIONS;
+    
     public static final ValueHolder<Map<Item, Double>> FOOD_TEMPERATURES;
 
     public static final ValueHolder<Integer> WATERSKIN_STRENGTH;
@@ -81,7 +83,6 @@ public class ConfigSettings
     public static final ValueHolder<Triplet<Integer, Integer, Double>> LLAMA_FUR_TIMINGS;
     public static final ValueHolder<Map<ResourceLocation, Integer>> CHAMELEON_BIOMES;
     public static final ValueHolder<Map<ResourceLocation, Integer>> LLAMA_BIOMES;
-    public static final ValueHolder<Boolean> CHECK_SLEEP_CONDITIONS;
 
 
     // Makes the settings instantiation collapsible & easier to read
@@ -137,50 +138,50 @@ public class ConfigSettings
         decoder -> decoder.getBoolean("GraceEnabled"),
         saver -> ColdSweatConfig.getInstance().setGracePeriodEnabled(saver));
 
+        CAVE_INSULATION = addSyncedSetting("cave_insulation", () -> WorldSettingsConfig.getInstance().getCaveInsulation(),
+                                           encoder -> ConfigHelper.writeNBTDouble(encoder, "CaveInsulation"),
+                                           decoder -> decoder.getDouble("CaveInsulation"),
+                                           saver -> WorldSettingsConfig.getInstance().setCaveInsulation(saver));
+
         BIOME_TEMPS = addSyncedSetting("biome_temps", () -> ConfigHelper.getBiomesWithValues(WorldSettingsConfig.getInstance().getBiomeTemperatures(), true),
-        encoder -> ConfigHelper.writeNBTTripletMap(encoder, "BiomeTemps"),
-        decoder -> ConfigHelper.readNBTTripletMap(decoder, "BiomeTemps"),
+        encoder -> ConfigHelper.writeBiomeTemps(encoder, "BiomeTemps"),
+        decoder -> ConfigHelper.readBiomeTemps(decoder, "BiomeTemps"),
         saver -> WorldSettingsConfig.getInstance().setBiomeTemperatures(saver.entrySet().stream()
                                                             .map(entry ->
                                                             {
                                                                 Temperature.Units units = entry.getValue().getThird();
-                                                                double min = CSMath.convertTemp(entry.getValue().getFirst(), Temperature.Units.MC, units, true);
-                                                                double max = CSMath.convertTemp(entry.getValue().getSecond(), Temperature.Units.MC, units, true);
+                                                                double min = Temperature.convertUnits(entry.getValue().getFirst(), Temperature.Units.MC, units, true);
+                                                                double max = Temperature.convertUnits(entry.getValue().getSecond(), Temperature.Units.MC, units, true);
                                                                 return Arrays.asList(entry.getKey().toString(), min, max, units);
                                                             })
                                                             .collect(Collectors.toList())));
 
         BIOME_OFFSETS = addSyncedSetting("biome_offsets", () -> ConfigHelper.getBiomesWithValues(WorldSettingsConfig.getInstance().getBiomeTempOffsets(), false),
-        encoder -> ConfigHelper.writeNBTTripletMap(encoder, "BiomeOffsets"),
-        decoder -> ConfigHelper.readNBTTripletMap(decoder, "BiomeOffsets"),
+        encoder -> ConfigHelper.writeBiomeTemps(encoder, "BiomeOffsets"),
+        decoder -> ConfigHelper.readBiomeTemps(decoder, "BiomeOffsets"),
         saver -> WorldSettingsConfig.getInstance().setBiomeTempOffsets(saver.entrySet().stream()
                                                             .map(entry ->
                                                             {
                                                                 Temperature.Units units = entry.getValue().getThird();
-                                                                double min = CSMath.convertTemp(entry.getValue().getFirst(), Temperature.Units.MC, units, true);
-                                                                double max = CSMath.convertTemp(entry.getValue().getSecond(), Temperature.Units.MC, units, true);
+                                                                double min = Temperature.convertUnits(entry.getValue().getFirst(), Temperature.Units.MC, units, false);
+                                                                double max = Temperature.convertUnits(entry.getValue().getSecond(), Temperature.Units.MC, units, false);
                                                                 return Arrays.asList(entry.getKey().toString(), min, max, units);
                                                             })
                                                             .collect(Collectors.toList())));
 
-        CAVE_INSULATION = addSyncedSetting("cave_insulation", () -> WorldSettingsConfig.getInstance().getCaveInsulation(),
-        encoder -> ConfigHelper.writeNBTDouble(encoder, "CaveInsulation"),
-        decoder -> decoder.getDouble("CaveInsulation"),
-        saver -> WorldSettingsConfig.getInstance().setCaveInsulation(saver));
+        DIMENSION_TEMPS = addSyncedSetting("dimension_temps", () -> ConfigHelper.getDimensionsWithValues(WorldSettingsConfig.getInstance().getDimensionTemperatures()),
+        encoder -> ConfigHelper.writeDimensionTemps(encoder, "DimensionTemps"),
+        decoder -> ConfigHelper.readDimensionTemps(decoder, "DimensionTemps"),
+        saver -> WorldSettingsConfig.getInstance().setDimensionTemperatures(saver.entrySet().stream()
+                                                     .map(entry -> Arrays.asList(entry.getKey().toString(), entry.getValue().getFirst(), entry.getValue().getSecond().toString()))
+                                                     .collect(Collectors.toList())));
 
-        DIMENSION_TEMPS = addSyncedSetting("dimension_temps", () -> WorldSettingsConfig.getInstance().getDimensionTemperatures().stream()
-                                                   .map(entry -> new AbstractMap.SimpleEntry<>(new ResourceLocation((String) entry.get(0)), ((Number) entry.get(1)).doubleValue()))
-                                                   .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)),
-        encoder -> ConfigHelper.writeNBTDoubleMap(encoder, "DimensionTemps"),
-        decoder -> ConfigHelper.readNBTDoubleMap(decoder, "DimensionTemps"),
-        saver -> WorldSettingsConfig.getInstance().setDimensionTemperatures(saver.entrySet().stream().map(entry -> Arrays.asList(entry.getKey().toString(), entry.getValue())).collect(Collectors.toList())));
-
-        DIMENSION_OFFSETS = addSyncedSetting("dimension_offsets", () -> WorldSettingsConfig.getInstance().getDimensionTempOffsets().stream()
-                                                   .map(entry -> new AbstractMap.SimpleEntry<>(new ResourceLocation((String) entry.get(0)), ((Number) entry.get(1)).doubleValue()))
-                                                   .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)),
-        encoder -> ConfigHelper.writeNBTDoubleMap(encoder, "DimensionOffsets"),
-        decoder -> ConfigHelper.readNBTDoubleMap(decoder, "DimensionOffsets"),
-        saver -> WorldSettingsConfig.getInstance().setDimensionTempOffsets(saver.entrySet().stream().map(entry -> Arrays.asList(entry.getKey().toString(), entry.getValue())).collect(Collectors.toList())));
+        DIMENSION_OFFSETS = addSyncedSetting("dimension_offsets", () -> ConfigHelper.getDimensionsWithValues(WorldSettingsConfig.getInstance().getDimensionTempOffsets()),
+        encoder -> ConfigHelper.writeDimensionTemps(encoder, "DimensionOffsets"),
+        decoder -> ConfigHelper.readDimensionTemps(decoder, "DimensionOffsets"),
+        saver -> WorldSettingsConfig.getInstance().setDimensionTempOffsets(saver.entrySet().stream()
+                                                     .map(entry -> Arrays.asList(entry.getKey().toString(), entry.getValue().getFirst(), entry.getValue().getSecond().toString()))
+                                                     .collect(Collectors.toList())));
 
         BOILER_FUEL = addSetting("boiler_fuel_items", () -> ConfigHelper.getItemsWithValues(ItemSettingsConfig.getInstance().getBoilerFuelItems()));
         ICEBOX_FUEL = addSetting("icebox_fuel_items", () -> ConfigHelper.getItemsWithValues(ItemSettingsConfig.getInstance().getIceboxFuelItems()));
@@ -445,8 +446,8 @@ public class ConfigSettings
     public enum Difficulty
     {
         SUPER_EASY(CSMath.mapOf(
-            "min_temp", () -> CSMath.convertTemp(40, Temperature.Units.F, Temperature.Units.MC, true),
-            "max_temp", () -> CSMath.convertTemp(120, Temperature.Units.F, Temperature.Units.MC, true),
+            "min_temp", () -> Temperature.convertUnits(40, Temperature.Units.F, Temperature.Units.MC, true),
+            "max_temp", () -> Temperature.convertUnits(120, Temperature.Units.F, Temperature.Units.MC, true),
             "temp_rate", () -> 0.5,
             "require_thermometer", () -> false,
             "fire_resistance_enabled", () -> true,
@@ -455,8 +456,8 @@ public class ConfigSettings
         )),
 
         EASY(CSMath.mapOf(
-            "min_temp", () -> CSMath.convertTemp(45, Temperature.Units.F, Temperature.Units.MC, true),
-            "max_temp", () -> CSMath.convertTemp(110, Temperature.Units.F, Temperature.Units.MC, true),
+            "min_temp", () -> Temperature.convertUnits(45, Temperature.Units.F, Temperature.Units.MC, true),
+            "max_temp", () -> Temperature.convertUnits(110, Temperature.Units.F, Temperature.Units.MC, true),
             "temp_rate", () -> 0.75,
             "require_thermometer", () -> false,
             "fire_resistance_enabled", () -> true,
@@ -465,8 +466,8 @@ public class ConfigSettings
         )),
 
         NORMAL(CSMath.mapOf(
-            "min_temp", () -> CSMath.convertTemp(50, Temperature.Units.F, Temperature.Units.MC, true),
-            "max_temp", () -> CSMath.convertTemp(100, Temperature.Units.F, Temperature.Units.MC, true),
+            "min_temp", () -> Temperature.convertUnits(50, Temperature.Units.F, Temperature.Units.MC, true),
+            "max_temp", () -> Temperature.convertUnits(100, Temperature.Units.F, Temperature.Units.MC, true),
             "temp_rate", () -> 1.0,
             "require_thermometer", () -> true,
             "fire_resistance_enabled", () -> true,
@@ -475,8 +476,8 @@ public class ConfigSettings
         )),
 
         HARD(CSMath.mapOf(
-            "min_temp", () -> CSMath.convertTemp(60, Temperature.Units.F, Temperature.Units.MC, true),
-            "max_temp", () -> CSMath.convertTemp(90, Temperature.Units.F, Temperature.Units.MC, true),
+            "min_temp", () -> Temperature.convertUnits(60, Temperature.Units.F, Temperature.Units.MC, true),
+            "max_temp", () -> Temperature.convertUnits(90, Temperature.Units.F, Temperature.Units.MC, true),
             "temp_rate", () -> 1.5,
             "require_thermometer", () -> true,
             "fire_resistance_enabled", () -> false,
@@ -511,7 +512,7 @@ public class ConfigSettings
     }
 
     public static <T> ValueHolder<T> addSetting(String id, Supplier<T> supplier)
-    {   ValueHolder<T> loader = ValueHolder.of(supplier);
+    {   ValueHolder<T> loader = ValueHolder.simple(supplier);
         CONFIG_SETTINGS.put(id, loader);
         return loader;
     }
